# apriltag_ros

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  package.xml
cfg/: tags.yaml  tags_36h11.yaml
launch/: camera_36h11.launch copy.yml  camera_36h11.launch.yml  prova.launch.yml  webcam.launch.py  zed.launch.py  zed_gdgan.launch.py  zed_new.launch.py
src/: AprilTagNode.cpp  conversion.cpp  pose_estimation.cpp  pose_estimation.hpp  tag_functions.cpp  tag_functions.hpp
